<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">教务管理系统</string>
    <string name="action_settings">设置</string>
    <string name="action_exit">退出</string>
    <string name="action_newJwc">新系统</string>
    <string name="action_oldJwc">旧系统</string>
    <string name="action_orientation">屏幕方向</string>
    <string name="action_otherweb">其他网站</string>
    <string name="webUrlList">网站列表</string>
    <string name="nefu.com">东北林业大学</string>
    <string name="note">提示:</string>
    <string name="one">1.默认登陆的是新教务处管理系统，在系统选择中选择系统</string>
    <string name="two">2.默认的用户名与密码为空，如果选择新教务系统，需完善用户信息</string>
    <string name="three">3.旧系统目前不支持直接登陆，不必填写用户信息。</string>
    <string name="defalut_system">默认系统:</string>
    <string name="oldsystem">旧教务系统</string>
    <string name="newsystem">新教务系统</string>
    <string name="systemoption">系统选项</string>
    <string name="loginways">登陆方式</string>
    <string name="nopassword">无密码</string>
    <string name="needpassword">有密码</string>
    <string name="userinfo">账户信息</string>
    <string name="usrname">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="sure">确定</string>
    <string name="selectNew">无密码登陆</string>
    <string name="selectOld">密码登陆</string>
    <string name="changes">切换用户</string>
    <string name="user">用户名：</string>
    <string name="psw">密码：</string>
    <string name="diy">自定义添加</string>
    <string name="developer">开发者</string>
    <string name="help">帮助</string>
</resources>
